2005-10-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/hasmntopt.c (amu_hasmntopt): increase size of MNTMAXSTR
	from 128 to to 256, because some users have really long option
	strings.  Suggestion from jon+amd-at-spock.org.

	* amd/opts.c (expand_op): should check BUFSPACE for vlen+1, not
	just vlen.  Bug discovered when started using xstrlcpy().

	* ALL: convert from using strcat to the safer xstrlcat, and from
	strcpy to safer xstrlcpy.

2005-10-04  Erez Zadok  <ezk@cs.sunysb.edu>

	* hlfsd/hlfsd.h: remove old fatalerror() and ERRM macros.

	* hlfsd/hlfsd.c (fatalerror): new function instead of macro.
	Easier to use xstrlcat in this new function.

	* amd/amd.h, include/am_utils.h, amd/amd.c: moved 'hostd' extern
	from am_utils.h to amd.h, and define its size as a macro that
	could be passed to xstrl*().

	* ALL: convert from using sprintf to the safer xsnprintf.

	* mk-amd-map/Makefile.am (LDADD): link with libamu to get
	xsnprintf().

	* amd/amd.h, amd/amd.c, include/am_utils.h: moved pid_fsname
	extern from am_utils.h to amd.h, and define its size as a macro
	that could be passed to xsnprintf().

2005-10-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/Makefile.am: use strutil.c, not util.c.

	* libamu/strutil.c: rename from util.c to explain better purpose
	of file.  Move xvsnprintf and xsnprintf from xutil.c to this file.

	* libamu/xutil.c: explain purpose of file.  Move mkdirs/rmdirs
	code from old util.c.

2005-10-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/header_templates.m4: templates for FFS.

	* m4/macros/check_mnttab_type.m4: on BSD44 systems, check for file
	system mount table name via the MOUNT_* mount(2) macros (because
	BSD44 keeps the mount table in the kernel).

	* configure.in: synchronise order of searching for mnttab entries
	and mount names.  The new order is "ext3 ext2 ffs ufs 4.2 4.3 4.4
	efs xfs jfs ultrix" (which would prefer ffs on BSD44 instead of
	ufs, and ext3 instead of ext2 on Linux).
